--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ option(FLB_JEMALLOC           "Build with Jemalloc support"   No)
 option(FLB_REGEX              "Build with Regex support"     Yes)
 option(FLB_UTF8_ENCODER       "Build with UTF8 encoding support" Yes)
 option(FLB_PARSER             "Build with Parser support"    Yes)
-option(FLB_TLS                "Build with SSL/TLS support"    No)
+option(FLB_TLS                "Build with SSL/TLS support"   Yes)
 option(FLB_BINARY             "Build executable binary"      Yes)
 option(FLB_EXAMPLES           "Build examples"               Yes)
 option(FLB_SHARED_LIB         "Build shared library"         Yes)
@@ -98,72 +98,72 @@ option(FLB_PROXY_GO           "Enable Go plugins support"   Yes)
 # systems, but specific old-toolchains do not implement it.
 
 # Build-in Plugins
-option(FLB_IN_CPU             "Enable CPU input plugin"             Yes)
-option(FLB_IN_THERMAL         "Enable Thermal plugin"               Yes)
-option(FLB_IN_DISK            "Enable Disk input plugin"            Yes)
-option(FLB_IN_DOCKER          "Enable Docker input plugin"          Yes)
-option(FLB_IN_EXEC            "Enable Exec input plugin"            Yes)
-option(FLB_IN_FORWARD         "Enable Forward input plugin"         Yes)
-option(FLB_IN_HEALTH          "Enable Health input plugin"          Yes)
+option(FLB_IN_CPU             "Enable CPU input plugin"              No)
+option(FLB_IN_THERMAL         "Enable Thermal plugin"                No)
+option(FLB_IN_DISK            "Enable Disk input plugin"             No)
+option(FLB_IN_DOCKER          "Enable Docker input plugin"           No)
+option(FLB_IN_EXEC            "Enable Exec input plugin"             No)
+option(FLB_IN_FORWARD         "Enable Forward input plugin"          No)
+option(FLB_IN_HEALTH          "Enable Health input plugin"           No)
 option(FLB_IN_HTTP            "Enable HTTP input plugin"             No)
-option(FLB_IN_MEM             "Enable Memory input plugin"          Yes)
-option(FLB_IN_KMSG            "Enable Kernel log input plugin"      Yes)
-option(FLB_IN_LIB             "Enable library mode input plugin"    Yes)
-option(FLB_IN_RANDOM          "Enable random input plugin"          Yes)
-option(FLB_IN_SERIAL          "Enable Serial input plugin"          Yes)
+option(FLB_IN_MEM             "Enable Memory input plugin"           No)
+option(FLB_IN_KMSG            "Enable Kernel log input plugin"       No)
+option(FLB_IN_LIB             "Enable library mode input plugin"     No)
+option(FLB_IN_RANDOM          "Enable random input plugin"           No)
+option(FLB_IN_SERIAL          "Enable Serial input plugin"           No)
 option(FLB_IN_STDIN           "Enable Standard input plugin"        Yes)
 option(FLB_IN_SYSLOG          "Enable Syslog input plugin"          Yes)
 option(FLB_IN_TAIL            "Enable Tail input plugin"            Yes)
-option(FLB_IN_TCP             "Enable TCP input plugin"             Yes)
-option(FLB_IN_MQTT            "Enable MQTT Broker input plugin"     Yes)
-option(FLB_IN_HEAD            "Enable Head input plugin"            Yes)
-option(FLB_IN_PROC            "Enable Process input plugin"         Yes)
-option(FLB_IN_SYSTEMD         "Enable Systemd input plugin"         Yes)
+option(FLB_IN_TCP             "Enable TCP input plugin"              No)
+option(FLB_IN_MQTT            "Enable MQTT Broker input plugin"      No)
+option(FLB_IN_HEAD            "Enable Head input plugin"             No)
+option(FLB_IN_PROC            "Enable Process input plugin"          No)
+option(FLB_IN_SYSTEMD         "Enable Systemd input plugin"          No)
 option(FLB_IN_DUMMY           "Enable Dummy input plugin"           Yes)
-option(FLB_IN_NETIF           "Enable NetworkIF input plugin"       Yes)
+option(FLB_IN_NETIF           "Enable NetworkIF input plugin"        No)
 option(FLB_IN_WINLOG          "Enable Windows Log input plugin"      No)
-option(FLB_IN_COLLECTD        "Enable Collectd input plugin"        Yes)
-option(FLB_IN_STATSD          "Enable StatsD input plugin"          Yes)
-option(FLB_IN_STORAGE_BACKLOG "Enable storage backlog input plugin" Yes)
-option(FLB_IN_EMITTER         "Enable emitter input plugin"         Yes)
-option(FLB_OUT_AZURE          "Enable Azure output plugin"          Yes)
-option(FLB_OUT_BIGQUERY       "Enable BigQuery output plugin"       Yes)
-option(FLB_OUT_COUNTER        "Enable Counter output plugin"        Yes)
-option(FLB_OUT_DATADOG        "Enable DataDog output plugin"        Yes)
-option(FLB_OUT_ES             "Enable Elasticsearch output plugin"  Yes)
-option(FLB_OUT_EXIT           "Enable Exit output plugin"           Yes)
-option(FLB_OUT_FORWARD        "Enable Forward output plugin"        Yes)
-option(FLB_OUT_GELF           "Enable GELF output plugin"           Yes)
+option(FLB_IN_COLLECTD        "Enable Collectd input plugin"         No)
+option(FLB_IN_STATSD          "Enable StatsD input plugin"           No)
+option(FLB_IN_STORAGE_BACKLOG "Enable storage backlog input plugin"  No)
+option(FLB_IN_EMITTER         "Enable emitter input plugin"          No)
+option(FLB_OUT_AZURE          "Enable Azure output plugin"           No)
+option(FLB_OUT_BIGQUERY       "Enable BigQuery output plugin"        No)
+option(FLB_OUT_COUNTER        "Enable Counter output plugin"         No)
+option(FLB_OUT_DATADOG        "Enable DataDog output plugin"         No)
+option(FLB_OUT_ES             "Enable Elasticsearch output plugin"   No)
+option(FLB_OUT_EXIT           "Enable Exit output plugin"            No)
+option(FLB_OUT_FORWARD        "Enable Forward output plugin"         No)
+option(FLB_OUT_GELF           "Enable GELF output plugin"            No)
 option(FLB_OUT_HTTP           "Enable HTTP output plugin"           Yes)
-option(FLB_OUT_INFLUXDB       "Enable InfluxDB output plugin"       Yes)
-option(FLB_OUT_NATS           "Enable NATS output plugin"           Yes)
-option(FLB_OUT_TCP            "Enable TCP output plugin"            Yes)
-option(FLB_OUT_PLOT           "Enable Plot output plugin"           Yes)
+option(FLB_OUT_INFLUXDB       "Enable InfluxDB output plugin"        No)
+option(FLB_OUT_NATS           "Enable NATS output plugin"            No)
+option(FLB_OUT_TCP            "Enable TCP output plugin"             No)
+option(FLB_OUT_PLOT           "Enable Plot output plugin"            No)
 option(FLB_OUT_FILE           "Enable file output plugin"           Yes)
-option(FLB_OUT_TD             "Enable Treasure Data output plugin"  Yes)
+option(FLB_OUT_TD             "Enable Treasure Data output plugin"   No)
 option(FLB_OUT_RETRY          "Enable Retry test output plugin"      No)
 option(FLB_OUT_PGSQL          "Enable PostgreSQL output plugin"      No)
-option(FLB_OUT_SLACK          "Enable Slack output plugin"          Yes)
-option(FLB_OUT_SPLUNK         "Enable Splunk output plugin"         Yes)
-option(FLB_OUT_STACKDRIVER    "Enable Stackdriver output plugin"    Yes)
+option(FLB_OUT_SLACK          "Enable Slack output plugin"           No)
+option(FLB_OUT_SPLUNK         "Enable Splunk output plugin"          No)
+option(FLB_OUT_STACKDRIVER    "Enable Stackdriver output plugin"     No)
 option(FLB_OUT_STDOUT         "Enable STDOUT output plugin"         Yes)
-option(FLB_OUT_LIB            "Enable library mode output plugin"   Yes)
+option(FLB_OUT_LIB            "Enable library mode output plugin"    No)
 option(FLB_OUT_NULL           "Enable dev null output plugin"       Yes)
-option(FLB_OUT_FLOWCOUNTER    "Enable flowcount output plugin"      Yes)
+option(FLB_OUT_FLOWCOUNTER    "Enable flowcount output plugin"       No)
 option(FLB_OUT_KAFKA          "Enable Kafka output plugin"           No)
-option(FLB_OUT_KAFKA_REST     "Enable Kafka Rest output plugin"     Yes)
-option(FLB_FILTER_AWS         "Enable aws filter"                   Yes)
-option(FLB_FILTER_EXPECT      "Enable expect filter"                Yes)
+option(FLB_OUT_KAFKA_REST     "Enable Kafka Rest output plugin"      No)
+option(FLB_FILTER_AWS         "Enable aws filter"                    No)
+option(FLB_FILTER_EXPECT      "Enable expect filter"                 No)
 option(FLB_FILTER_GREP        "Enable grep filter"                  Yes)
 option(FLB_FILTER_MODIFY      "Enable modify filter"                Yes)
 option(FLB_FILTER_STDOUT      "Enable stdout filter"                Yes)
 option(FLB_FILTER_PARSER      "Enable parser filter"                Yes)
-option(FLB_FILTER_KUBERNETES  "Enable kubernetes filter"            Yes)
+option(FLB_FILTER_KUBERNETES  "Enable kubernetes filter"             No)
 option(FLB_FILTER_REWRITE_TAG "Enable tag rewrite filter"           Yes)
 option(FLB_FILTER_THROTTLE    "Enable throttle filter"              Yes)
-option(FLB_FILTER_NEST        "Enable nest filter"                  Yes)
-option(FLB_FILTER_LUA         "Enable Lua scripting filter"         Yes)
-option(FLB_FILTER_RECORD_MODIFIER "Enable record_modifier filter"   Yes)
+option(FLB_FILTER_NEST        "Enable nest filter"                   No)
+option(FLB_FILTER_LUA         "Enable Lua scripting filter"          No)
+option(FLB_FILTER_RECORD_MODIFIER "Enable record_modifier filter"    No)
 
 # Enable all features
 if(FLB_ALL)
